--- a/src/resources/static/index.html
+++ b/src/resources/static/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
   #%L
-  graphql-enabler
+  search-enabler
   %%
-  Copyright (C) 2019 AGT International. Author Pavel Smirnov (psmirnov@agtinternational.com)
+  Copyright (C) 2019 - 2020 AGT International. Author Pavel Smirnov (psmirnov@agtinternational.com)
   %%
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -18,6 +18,7 @@
   limitations under the License.
   #L%
   -->
+
 
 <html xmlns:https="http://www.w3.org/1999/xhtml">
 <head>
