Fixed problem with RuleType, added smartEnergy tests, tested

--- a/src/resources/static/index.html
+++ b/src/resources/static/index.html
@@ -52,10 +52,8 @@
 </head>
 <body>
 <div class="welcome">
-    <h2>Welcome to the graphql-java HTTP example.</h2>
-    <span>This is backed by the classic StarWars example schema and embeds
-        the <a href="https://github.com/graphql/graphiql">graphiql</a> tooling to allow you to fire off queries.
-    </span>
+    <h2>IoTCrawler Search Enabler</h2>
+    <span>Use ctrl+space for auto-completion</span>
 </div>
 <div id="graphiql">Loading graphiql editor...</div>
 <script>
